7.kubernetes/argocd/argocd-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`argocd12.anajak-khmer.site`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: argocd-transport
          #serversTransport: argocd-transport@kubernetescrd

  tls:
    #secretName: argocd-secret
    secretName: argocd-secret
