7.kubernetes/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: argocd-server-ingress
 namespace: argocd

 annotations:
   cert-manager.io/cluster-issuer: letsencrypt-prod
   kubernetes.io/ingress.class: traefik
   #traefik.ingress.kubernetes.io/service.serversscheme: https
   #traefik.ingress.kubernetes.io/service.serverstransport: argocd-transport@kubernetescrd
   traefik.ingress.kubernetes.io/router.entrypoints: websecure
   traefik.ingress.kubernetes.io/router.tls: "true"
spec:
 ingressClassName: traefik 
 rules:
   - host: argocd12.anajak-khmer.site
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: argocd-server
               port:
                 name: https
 tls:
   - hosts:
       - argocd12.anajak-khmer.site
     secretName: argocd-secret # do not change, this is provided by Argo CD
